# trottr

./: .env.tpl  .gitignore  LICENSE  README.md  components.json  jsconfig.json  kt  package-lock.json  package.json  pyproject.toml
.cursor/rules/: context.mdc  modelcreation.mdc  workspacesystem.mdc
app/: .env.tpl  admin.html  components.json  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js  web-types.json
app/public/: manifest.json  offline.html
app/src/: pdf.scss  style.css
app/tests/: example.test.js
server/: .env.tpl  kt  main.py  requirements.txt
server/api/: account.py  ai_user_prompt.py  auth.py  browser_ext.py  company.py  contact.py  contact_relation_type.py  country.py  dataset.py  health.py  home.py  import_data.py  job.py  job_activity.py  job_attachment.py  job_category.py  job_diagnostic.py  job_job_diagnostic.py  job_job_task.py  job_report.py  job_speciality.py  job_status.py  job_task.py  operators.py  presence.py  recaptcha.py  search.py  site.py  storage.py  subscriptions.py  unavailability.py  users.py  utils.py  websocket.py  workspace.py  workspace_billing.py
server/cli/: __init__.py
server/core/: __init__.py  app.py  config.py  context.py  database.py  dependencies.py  fields.py  http.py  logger.py  url.py
server/migrations/: alembic.ini  env.py
server/models/: base.py  company.py  contact.py  contact_relation_type.py  country.py  job.py  job_activity.py  job_attachment.py  job_category.py  job_diagnostic.py  job_job_diagnostic.py  job_job_task.py  job_report.py  job_speciality.py  job_status.py  (+13 more)
(+547 files in other folders)
